// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button - onMouseEnter & onMouseLeave 1`] = `
<button
  className="iogart-base iogart-ButtonBase root-0-2-13 iogart-ui iogart-Button root-0-2-1"
  onBlur={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Button
</button>
`;

exports[`Button - onMouseEnter & onMouseLeave 2`] = `
<button
  className="iogart-base iogart-ButtonBase root-0-2-13 iogart--hover iogart-ui iogart-Button root-0-2-1"
  onBlur={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Button
</button>
`;

exports[`Button - onMouseEnter & onMouseLeave 3`] = `
<button
  className="iogart-base iogart-ButtonBase root-0-2-13 iogart-ui iogart-Button root-0-2-1"
  onBlur={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Button
</button>
`;
